Correction nav overlapping the title in section company. A div in the section Header has been added with a size of the nav bar. Now the Navbar appears when the scroll is under this anchor

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -196,3 +196,13 @@
     }
 }
 
+#anchorNav{
+    width: 100%;
+    height: 51px;
+    position: absolute;
+    opacity: 1;
+    bottom: 0;
+    left:0;
+    display: block;
+}
+
